Update device idle settings.